Fix tiny style issue with overflow-x on <article>

--- a/_sass/documentation.sass
+++ b/_sass/documentation.sass
@@ -33,7 +33,7 @@ article
     margin-top: $normal-space
     max-width: $max-article-width
     margin-left: calc(#{$side-menu-width} + #{$normal-space})
-    overflow-x: auto
+    overflow-x: visible
     th
         border-bottom-width: 2px
     th, td
